--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "@capacitor-firebase/app": "^5.0.0",
+    "@capacitor-firebase/authentication": "^5.0.0",
     "@capacitor/android": "^5.0.3",
     "@capacitor/app": "^5.0.2",
     "@capacitor/browser": "^5.0.2",
@@ -29,6 +31,7 @@
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
     "dom7": "^4.0.6",
+    "firebase": "^9.22.0",
     "framework7": "^8.0.5",
     "framework7-icons": "^5.0.5",
     "framework7-svelte": "^8.0.5",
