--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "cross-env NODE_ENV=production vite build",
     "build-capacitor-ios": "cross-env NODE_ENV=production vite build && npx cap copy ios",
     "build-capacitor-android": "cross-env NODE_ENV=production vite build && npx cap copy android",
-    "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/"
+    "copysqlwasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm public/assets",
+    "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/ && npm run copysqlwasm"
   },
   "browserslist": [
     "IOS >= 15",
@@ -20,6 +21,7 @@
     "last 5 Firefox versions"
   ],
   "dependencies": {
+    "@capacitor-community/sqlite": "^5.0.2",
     "@capacitor-firebase/app": "^5.0.0",
     "@capacitor-firebase/authentication": "^5.0.0",
     "@capacitor/android": "^5.0.3",
@@ -30,15 +32,18 @@
     "@capacitor/keyboard": "^5.0.2",
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
+    "copyfiles": "^2.4.1",
     "dom7": "^4.0.6",
     "firebase": "^9.22.0",
     "framework7": "^8.0.5",
     "framework7-icons": "^5.0.5",
     "framework7-svelte": "^8.0.5",
+    "jeep-sqlite": "^2.3.6",
     "material-icons": "^1.13.6",
     "skeleton-elements": "^4.0.1",
     "svelte": "^3.59.1",
-    "swiper": "^9.3.2"
+    "swiper": "^9.3.2",
+    "typeorm": "^0.3.16"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3",
