--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@capacitor/keyboard": "^5.0.2",
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
+    "@tsconfig/svelte": "^4.0.1",
     "copyfiles": "^2.4.1",
     "dom7": "^4.0.6",
     "firebase": "^9.22.0",
@@ -42,8 +43,10 @@
     "material-icons": "^1.13.6",
     "skeleton-elements": "^4.0.1",
     "svelte": "^3.59.1",
+    "svelte-preprocess": "^5.0.4",
     "swiper": "^9.3.2",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@capacitor/cli": "^5.0.3",
