--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,8 @@
       "checkJs": true,
       "verbatimModuleSyntax": false
     },
-    "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+    "include": ["src/**/*.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"],
+    "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
   }
