--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -25,3 +25,6 @@ project(':capacitor-splash-screen').projectDir = new File('../node_modules/@capa
 
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
+
+include ':capacitorjs-plugin-wifi'
+project(':capacitorjs-plugin-wifi').projectDir = new File('../node_modules/capacitorjs-plugin-wifi/android')
