--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
     "@tsconfig/svelte": "^4.0.1",
+    "capacitorjs-plugin-wifi": "^1.0.7",
     "copyfiles": "^2.4.1",
     "dom7": "^4.0.6",
     "firebase": "^9.22.0",
