--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "build-capacitor-ios": "cross-env NODE_ENV=production vite build && npx cap copy ios",
     "build-capacitor-android": "cross-env NODE_ENV=production vite build && npx cap copy android",
     "copysqlwasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm public/assets",
+    "format": "prettier --write  --plugin prettier-plugin-svelte .",
     "postinstall": "cpy --flat ./node_modules/framework7-icons/fonts/*.* ./src/fonts/ && cpy --flat ./node_modules/material-icons/iconfont/*.* ./src/fonts/ && npm run copysqlwasm"
   },
+  "pre-commit": ["format"],
   "browserslist": [
     "IOS >= 15",
     "Safari >= 15",
@@ -57,6 +59,9 @@
     "cpy-cli": "^4.2.0",
     "cross-env": "^7.0.3",
     "postcss-preset-env": "^8.3.2",
+    "pre-commit": "^1.2.2",
+    "prettier": "^3.0.3",
+    "prettier-plugin-svelte": "^3.0.3",
     "vite": "^4.3.7"
   }
 }
