--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -26,5 +26,8 @@ project(':capacitor-splash-screen').projectDir = new File('../node_modules/@capa
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
 
+include ':capacitor-plugin-esptouch'
+project(':capacitor-plugin-esptouch').projectDir = new File('../node_modules/capacitor-plugin-esptouch/android')
+
 include ':capacitorjs-plugin-wifi'
 project(':capacitorjs-plugin-wifi').projectDir = new File('../node_modules/capacitorjs-plugin-wifi/android')
