sono ritornato MERDEEEEEEEEEEEEEEEEEEEEEEEEEEEE

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tsconfig/svelte": "^4.0.1",
     "capacitor-plugin-esptouch": "^0.0.1",
     "capacitorjs-plugin-wifi": "^1.0.7",
+    "chart.js": "^4.4.0",
     "copyfiles": "^2.4.1",
     "dom7": "^4.0.6",
     "firebase": "^9.22.0",
@@ -49,6 +50,7 @@
     "material-icons": "^1.13.6",
     "skeleton-elements": "^4.0.1",
     "svelte": "^3.59.1",
+    "svelte-chartjs": "^3.1.2",
     "svelte-preprocess": "^5.0.4",
     "swiper": "^9.3.2",
     "typeorm": "^0.3.16",
