--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@capacitor/core": "^5.0.3",
     "@capacitor/ios": "^5.0.3",
     "@capacitor/keyboard": "^5.0.2",
+    "@capacitor/push-notifications": "^5.1.0",
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
     "@tsconfig/svelte": "^4.0.1",
