--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "capacitor-plugin-esptouch": "^0.0.1",
     "capacitorjs-plugin-wifi": "^1.0.7",
     "chart.js": "^4.4.0",
+    "chartjs": "^0.3.24",
     "copyfiles": "^2.4.1",
     "dom7": "^4.0.6",
     "firebase": "^9.22.0",
@@ -50,6 +51,7 @@
     "material-icons": "^1.13.6",
     "skeleton-elements": "^4.0.1",
     "svelte": "^3.59.1",
+    "svelte-chart": "^1.0.0",
     "svelte-chartjs": "^3.1.2",
     "svelte-preprocess": "^5.0.4",
     "swiper": "^9.3.2",
