--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@capacitor/splash-screen": "^5.0.2",
     "@capacitor/status-bar": "^5.0.2",
     "@tsconfig/svelte": "^4.0.1",
+    "capacitor": "^0.5.6",
     "capacitor-plugin-esptouch": "^0.0.1",
     "capacitorjs-plugin-wifi": "^1.0.7",
     "chart.js": "^4.4.0",
